# nbody-simulation

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/barnes_hut/: force_calculator.rs  mod.rs  quadtree.rs
src/physics/: body.rs  mod.rs
src/visualization/: mod.rs
